CHANGES
*******

1.0.0-pre.9 (unreleased)
========================

- Nothing changed yet.


1.0.0-pre.8 (2013-08-30)
========================

- Updated ember to 1.0.0-pre.8 and handlebars to 1.0.0.

- Added ember data 0.13b.

- Added minified js for all resources.


1.0.0-pre.2 (2012-11-18)
========================

- 1.0.0-pre.2


0.9.8.1-1 (2012-07-12)
======================

- correct a typo in setup.py


0.9.8.1 (2012-07-12)
====================

- first release