@@ -4,7 +4,9 @@ CHANGES
 1.0.0-pre.9 (unreleased)
 ========================
 
-- Nothing changed yet.
+- Made ember data an independent resource, so that requiering ember does not
+  load emberdata automatically. To get emberdata, use
+  ``js.ember.ember_data.need()``.
 
 
 1.0.0-pre.8 (2013-08-30)
